--- a/sample/MaterialsExploration/top_taxo3.yml
+++ b/sample/MaterialsExploration/top_taxo3.yml
@@ -1,16 +1,16 @@
 linkset:
   block:
   - link:
-    - nodename: material data from material database
+    - nodename: material data from the material database
       linktype: is-a
       link:
       - nodename: an initial material database
-      - nodename: new material database for next repetition
+      - nodename: new material database for the next repetition
 
   - link:
-    - nodename: aquisition function values
+    - nodename: acquisition function values
       linktype: is-a
       link:
-      - nodename: UCB aquisition function values
-      - nodename: Thompson sampling aquisition function values
+      - nodename: UCB acquisition function values
+      - nodename: Thompson sampling acquisition function values
 
