--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 name = FuncDecompHelper
 version = attr: FuncDecompHelper.__version__
 license = Apache License 2.0
-description = Functional Decomposition Network Helper
+description = Function Decomposition Network Helper
 author = Hiori Kino
-url = https://github.com/nim-hrkn/FunctionalDecompositionNetworkHelper
+url = https://github.com/nim-hrkn/FunctionDecompositionNetworkHelper
 
 [options]
 install_requires = 
