--- a/sample/DescriptorTargetVariable/bottom_wf.yml
+++ b/sample/DescriptorTargetVariable/bottom_wf.yml
@@ -3,21 +3,21 @@ workflow:
   - blockname: crystal to each element
     list:
     - group:
-      - methodname: crystal way
+      - wayname: crystal way
         outputname: a crystal
     - group:
-      - methodname: Crystal translational vector crystal attribute way
+      - wayname: Crystal translational vector crystal attribute way
         outputname: crystal lattice
-      - methodname: Atomic position crystal attribute way
+      - wayname: Atomic position crystal attribute way
         outputname: atomic position of each atom
     - group:
-      - methodname: Crystal extended position way
+      - wayname: Crystal extended position way
         outputname: extended atomic position list
       - outputname: element of each atom
     - group: 
-      - methodname: Persistent homology way
+      - wayname: Persistent homology way
         outputname: persistent diagram
-      - methodname: Space group finder way
+      - wayname: Space group finder way
         outputname: space group
 
   - blockname: relative extended atomic positions -> SNAP
@@ -26,16 +26,16 @@ workflow:
       - outputname: atomic position of each atom
       - outputname: extended atomic position list
     - group:
-      - methodname: Absolute to relative position conversion way
+      - wayname: Absolute to relative position conversion way
         outputname: relative extended atomic positions from each atom
     - group:
-      - methodname: Relative atomic position to density conversion way
+      - wayname: Relative atomic position to density conversion way
         outputname: Obtain atom-centered atomic density satisfying atomic reordering from each atom
     - group:
-      - methodname: Each atom-centered radial and angular orthogonal function expansion way
+      - wayname: Each atom-centered radial and angular orthogonal function expansion way
         outputname: each atom-centered orthogonal function expansion coefficients
     - group:
-      - methodname: Atomic density rotational invariant feature way
+      - wayname: Atomic density rotational invariant feature way
         outputname: SNAP
 
   - blockname: extended atomic position list -> SOAP
@@ -44,13 +44,13 @@ workflow:
       - outputname: extended atomic position list
       - outputname: element of each atom
     - group:
-      - methodname: Atomic position to density conversion way
+      - wayname: Atomic position to density conversion way
         outputname: crystal atomic density satisfying atomic reordering
     - group:
-      - methodname: Radial and angular orthogonal function expansion way
+      - wayname: Radial and angular orthogonal function expansion way
         outputname: orthogonal function expansion coefficients
     - group:
-      - methodname: Crystal atomic density rotational invariant feature way
+      - wayname: Crystal atomic density rotational invariant feature way
         outputname: SOAP
 
   - blockname: relative extended atomic positions from each atom -> Behler 2body atomic coordinate feature 
@@ -59,10 +59,10 @@ workflow:
       - outputname: relative extended atomic positions from each atom
       - outputname: element of each atom
     - group:
-      - methodname: Atom-centered radial distribution conversion way
+      - wayname: Atom-centered radial distribution conversion way
         outputname: radial atomic distribution from each atom
     - group:
-      - methodname: Behler's 2-body symmetry function way
+      - wayname: Behler's 2-body symmetry function way
         outputname: Behler's 2-body symmetry function
 
   - blockname: relative extended atomic positions from each atom -> Behler 3body atomic coordinate feature 
@@ -71,11 +71,11 @@ workflow:
       - outputname: relative extended atomic positions from each atom
       - outputname: element of each atom
     - group:
-      - methodname: Atom-centered angle distribution conversion way
+      - wayname: Atom-centered angle distribution conversion way
         outputname: angle atomic distribution from each atom
       - outputname: Obtain radial atomic distribution from each atom
     - group:
-      - methodname: Behler's 3-body symmetry function way
+      - wayname: Behler's 3-body symmetry function way
         outputname: Behler's 3-body symmetry function
 
   - blockname: OFM Voronoi part
@@ -83,7 +83,7 @@ workflow:
     - group:
       - outputname: relative extended atomic positions from each atom
     - group:
-      - methodname: Solid angle way
+      - wayname: Solid angle way
         outputname: generalized coordination number of each atom
 
   - blockname: OFM atomic category part
@@ -92,7 +92,7 @@ workflow:
       - outputname: categorical quantity of each atom
       - outputname: generalized coordination number of each atom
     - group:
-      - methodname: Orbital field matrix conversion way
+      - wayname: Orbital field matrix conversion way
         outputname: atomic orbital field matrix
 
   - blockname: crystal to element direction
@@ -100,10 +100,10 @@ workflow:
     - group:
       - outputname: a crystal
     - group:
-      - methodname: Element crystal attribute way
+      - wayname: Element crystal attribute way
         outputname: element of each atom
     - group:
-      - methodname: Atomic number way
+      - wayname: Atomic number way
         outputname: atomic number of each atom
 
   - blockname: element of each atom to misc
@@ -111,15 +111,15 @@ workflow:
     - group:
       - outputname: element of each atom
     - group:
-      - methodname: Periodic table row number way
+      - wayname: Periodic table row number way
         outputname: periodic table row number of each atom
-      - methodname: Periodic table group number way
+      - wayname: Periodic table group number way
         outputname: periodic table group number of each atom
-      - methodname: Elemental category conversion way
+      - wayname: Elemental category conversion way
         outputname: elemental category of each atom
-      - methodname: Mendeleev number way
+      - wayname: Mendeleev number way
         outputname: Mendeleev number of each atom
-      - methodname: Dissociation energy selection way
+      - wayname: Dissociation energy selection way
         outputname: dissociation energy of each atom
 
   - blockname: density 
@@ -128,20 +128,20 @@ workflow:
       - outputname: element of each atom
       - outputname: crystal volume
     - group:
-      - methodname: Number density conversion way
+      - wayname: Number density conversion way
         outputname: number density of each atom 
-      - methodname: Average mass density conversion way
+      - wayname: Average mass density conversion way
         outputname: average mass density of each atom 
 
   - blockname: isotope mass density 
     list:
     - group:
       - outputname: element of each atom
-      - methodname: Neutron number way
+      - wayname: Neutron number way
         outputname: Select number of neutrons of each atom
       - outputname: crystal volume
     - group:
-      - methodname: Isotope mass density conversion way
+      - wayname: Isotope mass density conversion way
         outputname: isotope mass density 
 
 
@@ -150,7 +150,7 @@ workflow:
     - group:
        - outputname: crystal lattice
     - group:
-       - methodname: Crystal volume crystal attribute way
+       - wayname: Crystal volume crystal attribute way
          outputname: crystal volume
 
   - blockname: isolated atom to number of electrons and angular momentum
@@ -158,22 +158,22 @@ workflow:
     - group:
       - outputname: element of each atom
     - group:
-      - methodname: Isolated neutral atom way
+      - wayname: Isolated neutral atom way
         outputname: electronic configuration of isolated state of each atom
     - group:
-      - methodname: s-electron number conversion way
+      - wayname: s-electron number conversion way
         outputname: s-electron number of each atom
-      - methodname: p-electron number conversion way
+      - wayname: p-electron number conversion way
         outputname: p-electron number of each atom
-      - methodname: d-electron number conversion way
+      - wayname: d-electron number conversion way
         outputname: d-electron number of each atom
-      - methodname: f-electron number conversion way
+      - wayname: f-electron number conversion way
         outputname: f-electron number of each atom
-      - methodname: L_3d conversion way
+      - wayname: L_3d conversion way
         outputname: L_3d of each atom
-      - methodname: S_3d conversion way
+      - wayname: S_3d conversion way
         outputname: S_3d of each atom
-      - methodname: J_3d conversion way
+      - wayname: J_3d conversion way
         outputname: J_3d of each atom
 
   - blockname: experimental atom to angular momentum
@@ -181,15 +181,15 @@ workflow:
     - group:
       - outputname: element of each atom
     - group:
-      - methodname: Crystal valence state way
+      - wayname: Crystal valence state way
         outputname: valence state of each atom
     - group:
-      - methodname: Crystal atom way
+      - wayname: Crystal atom way
         outputname: electronic configuration in crystals of each atom
     - group:
-      - methodname: J_4f conversion way
+      - wayname: J_4f conversion way
         outputname: J_4f of each atom
-      - methodname: g_J conversion way
+      - wayname: g_J conversion way
         outputname: g_J of each atom
 
   - blockname: J_4f and g_J to 4f projection
@@ -198,9 +198,9 @@ workflow:
       - outputname: J_4f of each atom
       - outputname: g_J of each atom
     - group:
-      - methodname: (g_J-1)J_4f way
+      - wayname: (g_J-1)J_4f way
         outputname: spin direction projected J_4f of each atom
-      - methodname: (2-g_J)J_4f way
+      - wayname: (2-g_J)J_4f way
         outputname: orbital direction projected J_4f of each atom
 
   - blockname: isolated atom to wavefunction related values
@@ -208,26 +208,26 @@ workflow:
     - group:
       - outputname: atomic number of each atom
     - group:
-      - methodname: First-principles calculation way
+      - wayname: First-principles calculation way
         outputname: wavefunction of each atom
     - group:
-      - methodname: s-orbital selection way
+      - wayname: s-orbital selection way
         outputname: s-orbital of each atom
-      - methodname: p-orbital selection way
+      - wayname: p-orbital selection way
         outputname: p-orbital of each atom
-      - methodname: d-orbital selection way
+      - wayname: d-orbital selection way
         outputname: d-orbital of each atom
-      - methodname: f-orbital selection way
+      - wayname: f-orbital selection way
         outputname: f-orbital of each atom
-      - methodname: total energy selection way
+      - wayname: total energy selection way
         outputname: total energy of each atom
-      - methodname: s-orbital energy selection way
+      - wayname: s-orbital energy selection way
         outputname: s-orbital energy of each atom
-      - methodname: p-orbital energy selection way
+      - wayname: p-orbital energy selection way
         outputname: p-orbital energy of each atom
-      - methodname: d-orbital energy selection way
+      - wayname: d-orbital energy selection way
         outputname: d-orbital energy of each atom
-      - methodname: f-orbital energy selection way
+      - wayname: f-orbital energy selection way
         outputname: f-orbital energy of each atom
 
   - blockname: s-orbital to r^2
@@ -235,28 +235,28 @@ workflow:
     - group:
       - outputname: s-orbital of each atom
     - group:
-      - methodname: s-orbital r^2 expectation value way
+      - wayname: s-orbital r^2 expectation value way
         outputname: s-orbital r^2 expectation value of each atom
   - blockname: p-orbital to r^2
     list:
     - group:
       - outputname: p-orbital of each atom
     - group:
-      - methodname: p-orbital r^2 expectation value way
+      - wayname: p-orbital r^2 expectation value way
         outputname: p-orbital r^2 expectation value of each atom
   - blockname: d-orbital to r^2
     list:
     - group:
       - outputname: d-orbital of each atom
     - group:
-      - methodname: d-orbital r^2 expectation value way
+      - wayname: d-orbital r^2 expectation value way
         outputname: d-orbital r^2 expectation value of each atom
   - blockname: f-orbital to r^2
     list:
     - group:
       - outputname: f-orbital of each atom
     - group:
-      - methodname: f-orbital r^2 expectation value way
+      - wayname: f-orbital r^2 expectation value way
         outputname: f-orbital r^2 expectation value of each atom
 
   - blockname: isolated atom to energy quantities
@@ -264,51 +264,51 @@ workflow:
     - group:
       - outputname: element of each atom
     - group:
-      - methodname: ionization energy measurements way
+      - wayname: ionization energy measurements way
         outputname: ionization energy of each atom
-      - methodname: Dissociation energy selection way
+      - wayname: Dissociation energy selection way
         outputname: dissociation energy of each atom
-      - methodname: Electron affinity measurements way
+      - wayname: Electron affinity measurements way
         outputname: electron affinity of each atom
 
 
   - blockname: all electron negativity
     list:
     - group:
-      - methodname: Dissociation energies of typical homo atomic molecules way
+      - wayname: Dissociation energies of typical homo atomic molecules way
         outputname: dissociation energies of typical  homo atomic molecules
     - group:
-      - methodname: Electro-negativity generation way
+      - wayname: Electro-negativity generation way
         outputname: electro-negativity of all atoms
       - outputname: element of each atom
     - group:
-      - methodname: Electro-negativity selection way
+      - wayname: Electro-negativity selection way
         outputname: electro-negativity of each atom
 
 
   - blockname: all vdW radius
     list:
     - group:
-      - methodname: vdW-bonded crystals way
+      - wayname: vdW-bonded crystals way
         outputname: typical vdW-bonded crystals
     - group:
-      - methodname: vdW radius generation way
+      - wayname: vdW radius generation way
         outputname: vdW radius of all atoms
       - outputname: element of each atom
     - group:
-      - methodname: vdW radius selection way
+      - wayname: vdW radius selection way
         outputname: vdW radius of each atom
 
   - blockname: all covalent radius
     list:
     - group:
-      - methodname: Covalent-bonded crystals way
+      - wayname: Covalent-bonded crystals way
         outputname: typical covalent-bonded crystals
     - group:
-      - methodname: Covalent radius generation way
+      - wayname: Covalent radius generation way
         outputname: covalent radius of all atoms
       - outputname: element of each atom
     - group:
-      - methodname: Covalent radius selection way
+      - wayname: Covalent radius selection way
         outputname: covalent radius of each atom 
 
