--- a/sample/DescriptorTargetVariable/topmost_wf.yml
+++ b/sample/DescriptorTargetVariable/topmost_wf.yml
@@ -5,7 +5,7 @@ workflow:
     - group:
       - outputname: crystal desriptor satisfying all invariance
     - group:
-      - methodname: association with crystal descriptor and crystal target variable way
+      - wayname: association with crystal descriptor and crystal target variable way
         outputname: association with descriptor and crystal target variable satisfying all invariance
 
   - blockname: AD AT CT
@@ -13,10 +13,10 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: Atomic descriptor to crystal target way
+      - wayname: Atomic descriptor to crystal target way
         outputname: atomic target variable satisfying all invariance
     - group:
-      - methodname: Atomic target to crystal atarget association way
+      - wayname: Atomic target to crystal atarget association way
         outputname: association with descriptor and crystal target variable satisfying all invariance
 
   - blockname: AD CD by min
@@ -24,7 +24,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by min. way
+      - wayname: conversion by min. way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by min.
 
   - blockname: AD CD by max
@@ -32,7 +32,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by max. way
+      - wayname: conversion by max. way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by max.
 
   - blockname: AD CD by sum
@@ -40,7 +40,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by sum way
+      - wayname: conversion by sum way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by sum
 
   - blockname: AD CD by multiple moment expansion
@@ -48,7 +48,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by multiple moment expansion way
+      - wayname: conversion by multiple moment expansion way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by multiple moment expansion
 
 
@@ -57,7 +57,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by sum in category way
+      - wayname: conversion by sum in category way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by sum in category
 
   - blockname: AD CD by sum in category
@@ -65,7 +65,7 @@ workflow:
     - group:
       - outputname: all atomic descriptors satisfying coordinate invariance
     - group:
-      - methodname: conversion by categorical existence way
+      - wayname: conversion by categorical existence way
         outputname: crystal desriptor satisfying all invariance from all atomic descripotrs by categorical existence
 
 
