--- a/sample/MaterialsExploration/top_wf1.yml
+++ b/sample/MaterialsExploration/top_wf1.yml
@@ -5,20 +5,20 @@ workflow:
     - group:
       - outputname: material data from material database
     - group:
-      - methodname: Prediction model with errors way
+      - wayname: Prediction model with errors way
         outputname: a prediction model with prediction errors
     - group:
-      - methodname: BayesianOptimization MaterialCandidates way
+      - wayname: BayesianOptimization MaterialCandidates way
         outputname: a list of new materials
     - group:
-      - methodname: Observation way
+      - wayname: Observation way
         outputname: physical properties of new materials
     - group:
-      - methodname: Database update way
+      - wayname: Database update way
         outputname: updated material database
-      - methodname: EqualTo or greaterThanThreshold evaluation way
+      - wayname: EqualTo or greaterThanThreshold evaluation way
         outputname: new materials with physical property values equal to or above the threshold value
-      - methodname: LessThanThreshold evaluation way
+      - wayname: LessThanThreshold evaluation way
         outputname: new materials with physical property values below the threshold value
 
   - blockname: 
@@ -27,7 +27,7 @@ workflow:
       - outputname: new materials with physical property values below the threshold value
       - outputname: updated material database
     - group:
-      - methodname: New material databse for next repetition trigger way
+      - wayname: New material databse for next repetition trigger way
         outputname: new material database for next repetition
  
 
